# Praxis

./: .dockerignore  .gitignore  AGENTS.md  CASTM_ATARI_RESULTS.md  CASTM_BUILD_STATUS.md  CASTM_NEWSET_RESULTS.md  CODEX_CSN_PHASE1.md  CODEX_CSN_PHASE1B.md  CODEX_CSN_PHASE1B_SPEC.md  CODEX_TASK_WALL1.md  CODEX_TASK_WALL1_REWARD.md  CSN_BUILD_PLAN.md  CSN_PPO_README.md  CSN_PPO_REMAINING_WORK.md  CSN_RESULTS.md  Dockerfile  FULL_PMA_C_ATARI_REMAINING_WORK.md  LIVING_MEMORY_PMA_C_FULL_ATARI_SPEC.md  NEXT_SESSION_PROMPT.md  OVERNIGHT_CASTM_RESEARCH_LOG.md  OVERNIGHT_CASTM_RESULTS.md  PMA_C_BUILD_PLAN.md  PMA_C_GENERAL_CONTINUAL_LEARNING_SPEC.md  PMA_C_RESULTS.md  README.md  README_CONTEXT_ADDRESSED_SYNAPTIC_MEMORY.md  README_TASK_FREE_CONTINUAL_ATARI.md  RESUME.md  TFNS_BUILD_PLAN.md  TFNS_RESULTS.md  WALL1_RESULTS.md  baseline_ppo.py  codex_reward_summary.txt  codex_wall1_summary.txt  plot_csn.py  pyproject.toml  requirements.txt
agent/: README.md
castm_runs/: REPORT_2game.json  REPORT_2game.md  REPORT_3seeds.json  REPORT_3seeds.md  REPORT_ALL.json  REPORT_ALL.md  REPORT_five_rank4.json  REPORT_five_rank4.md  REPORT_five_seed1.json  REPORT_five_seed1.md  REPORT_probe.json  REPORT_probe.md  REPORT_seed1.json  REPORT_seed1.md  launch_ref.sh  run_castm.sh  run_castm_gpu2.sh  run_five_rank4.sh  run_naive_newset.sh  run_newset_refs_naive.sh  run_plastic_newset.sh  run_plastic_one.sh  run_probe.sh  run_refs.sh
pma_c_results/: make_atari_deployed_report.py  make_atari_figures.py  make_figures.py  make_minatar_figures.py
pmac/: __init__.py  adapter.py  anchors.py  atlas.py  auditor.py  behavior_distance.py  checkpoint.py  config.py  conservation.py  consolidation.py  continual.py  deployment.py  evaluation.py  growth.py  guard_pressure.py  guard_schedule.py  memory_selector.py  plotting.py  projection.py  rl_audit.py  rl_sentinels.py  rl_update.py  rollback_gate.py  router.py  scheduler.py  sentinels.py  stability.py  tree_utils.py
praxis/: __init__.py  config.py  contract.py  eval_render.py  plot_comparison.py  plot_curves.py  train.py  train_csn.py
sim/: README.md
tests/: test_csn_curriculum.py  test_csn_gradient_projection.py  test_csn_guarded_loss.py  test_csn_memory.py  test_csn_mosaic.py  test_csn_p0_sentinel_labeling.py  test_csn_p1_mosaic_everywhere.py  test_csn_p2_sentinel_required.py  test_csn_p3_guard_pressure.py  test_csn_p4_curriculum_integration.py  test_csn_p5_probes_analytic.py  test_csn_p6_5_guard_kl_bounded.py  test_csn_p6_validation_bank.py  test_csn_p7_memory_stratified.py  test_csn_p8_long_run_preset.py  test_csn_sentinel.py  test_csn_synthetic_probes.py  (+1 more)
(+303 files in other folders)
