[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmac-atari"
version = "0.1.0"
description = "PMA-C: continual PPO on full-ALE Atari with deployed certified-champion routing (deployed agent does not lose protected skills)."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
# JAX (jax[cuda12]==0.9.2) and envpool are installed separately and last — see
# requirements.txt and pmac/envs/setup_envpool.sh.
dependencies = ["numpy", "flax", "optax", "matplotlib", "pytest"]

[tool.setuptools.packages.find]
include = ["pmac*", "tfns*"]
